--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,19 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.rakugakibox.spring.boot</groupId>
+            <artifactId>orika-spring-boot-starter</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.5.4</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
