--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
             <version>1.5.4</version>
             <scope>compile</scope>
         </dependency>
+        <!-- swagger -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.2.26</version>
+        </dependency>
 
     </dependencies>
 
